test/expressions/bitshift/checks/bitshiftLargerThanNumBitsParam.0.good
bitshiftLargerThanNumBitsParam.chpl:8: error: Cannot bitshift 128 by 64 because 64 is >= the bitwidth of int(64)
